# DCU-TP3P2-G10

./: README.md  package-lock.json
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  compose.yaml  compose.yml  entrypoint.sh  pyproject.toml
backend/.sqlx/: query-1a5c92c29ef95014ec48e9f700731e81591bb2d97e697bac6a4972decde01ad6.json  query-20313f330bd37ca091d168b532daa6d8a49aba56b9632aacc9edba2afc3fd07a.json  query-26f5a0d6b9993db9dc6e00cb3742ffb85b2139edfde1ec14768dfcf16df31689.json  query-35bc2d3731cb2a2c33634400f7e4616478182439e91004dc45120520822f8b19.json  query-3c57dfd114ebb7c956ee32b447e8ef84676292e19d58c397f5cd47ed0ad93aee.json  query-48550e8420c84918a7401bd51c00e15ce88c91ad22659a69029bb2fec08a2534.json  query-496b95efea2cbbd80c4ae900ff0338417ad60d22f0b355db94ab94e32efc73b7.json  query-6343059db1581ecea7858593f3377f747cbfd304a62762a7074256ade75b78c7.json  query-7c653b59426444d2e43f4d98e510485f5143abfcb1a048f91ba9139cd8625d52.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-844e55546d2d16560953cc47e761de8cc53a489e2e15b9a873c859c726005aae.json  query-8c1e3d24124db15f3fdbf7fdca937ff5d3d76128f507d07e827571fe33186dfd.json  query-917ae94cd03685c2c4d74216cef45fda9130047641392408375b8300f56b2a43.json  query-9ea41be78c1d8e1ce70cb52ee509266fc83f4102c12cc196e96ece493ec11454.json  query-b1fb1f08fe072ac555abd1e4e36f2160783026b565994b3e6e83fc4d1497cbf2.json  query-c0f6f1ee34d0f6479311f147f6c9b4cb28b906cbd9bf427bbaff167583427591.json  query-c83c103e8cb7053e1ddf25f99b4a3f20fdf59958a1712f5bfcf0ad79a77a8c93.json  query-ca35cf3ede88384ceff9ae615ae3f02b6f765c1c01bd73189b4366e89199f897.json  query-cba5a86db98a2cad889f058c3bbadfc652f5f01b92922f35bc9fb82d41196126.json  query-d3af9e4031f9a9054eb399363b1df47981a08a362714798c838db9a3c97f8d80.json  query-d7f65b14cec26e698b8001dd953fc0c30d515f7a26826b29e6c7c2abf28b99a8.json  query-d9c476c4feb10ad5fad71b64027582adc7770354d3979ec9e59198609d0e8029.json  query-dffc2abb2351fdc9fa2c63333c385f77a2a3a481ebd427c95cc6868c47684dd5.json  query-ee7a4487b8b685527a6e1ad8f46612e953cba3f951c5ceb3a5304c1e48d51550.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json  query-fc2a2c64060e6c51ecd2d415f0baa4d33208d834821415fea01d3a472073e391.json
(+102 files in other folders)
