[package]
name = "contaminapp_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.1.2"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
base62 = "2.2.4"
chrono = "0.4.44"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
password-auth = "1.0.0"
resend-rs = "0.25.1"
rust_decimal = "1.42.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "uuid", "rust_decimal", "time"] }
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.52.3", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.11", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
