[project]
name = "contaminapp-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "JoacoSlime",email = "JoacoSlime@proton.me"}
]
license = "GPL-3.0-or-later"
requires-python = ">=3.14,<4"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-ulid (>=3.1.0,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "wtforms (>=3.2.2,<4.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "flask-uploads (>=0.2.1,<0.3.0)",
    "marshmallow (>=4.3.0,<5.0.0)",
    "flask-jwt-extended (>=4.7.4,<5.0.0)",
    "flask-cors (>=6.0.5,<7.0.0)",
    "flask-wtf (>=1.3.0,<2.0.0)",
    "flask-sqlalchemy-lite (>=0.2.1,<0.3.0)",
    "datetime (>=6.0,<7.0)",
    "sqlalchemy-utils (>=0.42.1,<0.43.0)",
    "wtforms-json (>=0.3.5,<0.4.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pyright]
venvPath = "."
venv = ".venv"
